--- a/OC/Kexts/WhateverGreen.kext.dSYM/Contents/Info.plist
+++ b/OC/Kexts/WhateverGreen.kext.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.as.vit9696.AppleALC</string>
+		<string>com.apple.xcode.dsym.as.vit9696.WhateverGreen</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
@@ -13,8 +13,8 @@
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.7.7</string>
+		<string>1.6.2</string>
 		<key>CFBundleVersion</key>
-		<string>1.7.7</string>
+		<string>1.6.2</string>
 	</dict>
 </plist>
