--- a/OC/Kexts/Lilu.kext.dSYM/Contents/Info.plist
+++ b/OC/Kexts/Lilu.kext.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.as.vit9696.WhateverGreen</string>
+		<string>com.apple.xcode.dsym.as.vit9696.Lilu</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
