--- a/OC/Kexts/NVMeFix.kext.dSYM/Contents/Info.plist
+++ b/OC/Kexts/NVMeFix.kext.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.as.vit9696.AppleALCU</string>
+		<string>com.apple.xcode.dsym.org.acidanthera.NVMeFix</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
@@ -13,8 +13,8 @@
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.8.4</string>
+		<string>1.1.1</string>
 		<key>CFBundleVersion</key>
-		<string>1.8.4</string>
+		<string>1.1.1</string>
 	</dict>
 </plist>
